# local-symmetries

./: pyproject.toml  symmetry.py  tests.py
